--- a/index.html
+++ b/index.html
@@ -53,16 +53,34 @@
             justify-content: center;
             margin-bottom: 10px;
         }
-        /* 锤头敲击木座的主要动画 */
+        /* 整個錘子的動畫（錘頭+手柄一起動）*/
         #gavelHead {
             transform-box: fill-box;
-            transform-origin: 50% 100%;
+            transform-origin: 50% 90%;
         }
         @keyframes gavelStrike {
-            0%   { transform: rotate(-35deg) translateY(-20px); }
-            40%  { transform: rotate(0deg) translateY(0); }
-            60%  { transform: rotate(5deg) translateY(5px); }
-            100% { transform: rotate(0deg) translateY(0); }
+            0% { 
+                transform: translateY(-50px) rotate(-45deg);
+                opacity: 0;
+            }
+            20% {
+                opacity: 1;
+            }
+            45% { 
+                transform: translateY(100px) rotate(0deg);
+            }
+            55% { 
+                transform: translateY(95px) rotate(0deg);
+            }
+            65% { 
+                transform: translateY(100px) rotate(0deg);
+            }
+            75% { 
+                transform: translateY(98px) rotate(0deg);
+            }
+            100% { 
+                transform: translateY(100px) rotate(0deg);
+            }
         }
         .sold-message{font-size:2.8rem;font-weight:700;background:linear-gradient(90deg,#fbbf24 0%,#f97316 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:celebration 1s ease-in-out}
         @keyframes celebration{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}
@@ -77,17 +95,18 @@
     <div class="sold-overlay" id="soldOverlay">
         <div class="auction-hammer-container">
             <svg id="gavelSvg" width="220" height="220" viewBox="0 0 200 200">
-                <!-- 木座 -->
+                <!-- 木座（固定不動）-->
                 <rect x="30" y="150" width="140" height="15" rx="6" fill="#8B5A2B"/>
                 <rect x="40" y="165" width="120" height="8" rx="4" fill="#6B3E1A"/>
 
-                <!-- 手柄 -->
-                <rect x="90" y="60" width="14" height="80" rx="7" fill="#8B5A2B"/>
-
-                <!-- 锤头组 -->
+                <!-- 整個錘子組（錘頭+手柄一起動）-->
                 <g id="gavelHead">
-                    <rect x="37" y="45" width="120" height="30" rx="8" fill="#A16207"/>
-                    <rect x="42" y="75" width="110" height="10" rx="5" fill="#78350F"/>
+                    <!-- 手柄 -->
+                    <rect x="90" y="20" width="14" height="100" rx="7" fill="#8B5A2B"/>
+                    
+                    <!-- 锤头 -->
+                    <rect x="37" y="5" width="120" height="30" rx="8" fill="#A16207"/>
+                    <rect x="42" y="35" width="110" height="10" rx="5" fill="#78350F"/>
                 </g>
             </svg>
         </div>
