--- a/index.html
+++ b/index.html
@@ -53,33 +53,27 @@
             justify-content: center;
             margin-bottom: 10px;
         }
-        /* 整個錘子的動畫（錘頭+手柄一起動）*/
+        /* ✅ 修复：锤子动画 - 只用旋转，不用位移 */
         #gavelHead {
             transform-box: fill-box;
-            transform-origin: 50% 90%;
+            transform-origin: 50% 75%;
         }
         @keyframes gavelStrike {
-            0% { 
-                transform: translateY(-50px) rotate(-45deg);
-                opacity: 0;
-            }
-            20% {
+            0% {
+                transform: rotate(-45deg);
                 opacity: 1;
             }
-            45% { 
-                transform: translateY(100px) rotate(0deg);
+            40% {
+                transform: rotate(0deg);
             }
-            55% { 
-                transform: translateY(95px) rotate(0deg);
+            55% {
+                transform: rotate(5deg);
             }
-            65% { 
-                transform: translateY(100px) rotate(0deg);
+            70% {
+                transform: rotate(-2deg);
             }
-            75% { 
-                transform: translateY(98px) rotate(0deg);
-            }
-            100% { 
-                transform: translateY(100px) rotate(0deg);
+            100% {
+                transform: rotate(0deg);
             }
         }
         .sold-message{font-size:2.8rem;font-weight:700;background:linear-gradient(90deg,#fbbf24 0%,#f97316 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:celebration 1s ease-in-out}
